@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020201219"
-#define public MagickPackageReleaseDate "snapshot-20201219"
+#define public MagickPackageVersionAddendum ".020201220"
+#define public MagickPackageReleaseDate "snapshot-20201220"
